Modify:Title Info

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             margin-top: -8%;
         }
 
+        #info {
+            margin-left: 10%;
+            margin-top: -8%;
+            text-align: left;
+        }
+
         .homeBackground {
             background-image: url("./images/background.jpg");
             position: fixed;
@@ -71,7 +77,11 @@
     <!-- 背景图片 -->
     <div class="homeBackground"></div>
     <!-- 主页内容 -->
-    <img class="Logo" src="./images/Logo.png"/>
+    <!-- <img class="Logo" src="./images/Logo.png"/> -->
+    <div id="info">
+        <h1>冰云信息化平台</h1>
+        <label>网站建设中…</label>
+    </div>
 </body>
 
 </html>
