--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
     <!-- 背景图片 -->
     <div class="homeBackground"></div>
     <!-- 主页内容 -->
-    <!-- <img class="Logo" src="./images/Logo.png"/> -->
-    <div id="info">
+    <img class="Logo" src="./images/Logo.png"/>
+    <!-- <div id="info">
         <h1>冰云信息化平台</h1>
         <label>网站建设中…</label>
-    </div>
+    </div> -->
 </body>
 
 </html>
