--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>北京冰云信息科技有限公司</title>
     <meta name="keywords" content="刘佳华" />
-    <meta name="description" content="梦开始的地方" />
+    <meta name="description" content="" />
     <meta name="author" content="LiuJiaHua" />
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
     <style>
@@ -100,7 +100,7 @@
         <div class="container">
             <p style="margin-bottom: 10px;" />
             <p style="margin-bottom: 10px;">
-                Copyright &copy; 2019 - 2021 www.iceelves.com All Rights Reserved
+                Copyright &copy; 2019 - 2022 www.iceelves.com All Rights Reserved
             </p>
             <p style="margin-bottom: 10px;">
                 北京冰云信息科技有限公司 | <a style="color:white;" href="http://beian.miit.gov.cn/"
