Modify:Control Logo

--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
             white-space: nowrap;
         }
     </style>
+    <script>
+        console.info('')
+        console.info('  \u001b[96m$$$$$$\\ \u001b[93m         \u001b[92m              \u001b[96m$$$$$$$$\\ \u001b[93m$$\\ \u001b[92m           \u001b[91m          \u001b[95m          ')
+        console.info('  \u001b[96m\\_$$  _|\u001b[93m         \u001b[92m              \u001b[96m$$  _____|\u001b[93m$$ |\u001b[92m           \u001b[91m          \u001b[95m          ')
+        console.info('  \u001b[96m  $$ |  \u001b[93m$$$$$$$\\ \u001b[92m $$$$$$\\      \u001b[96m$$ |      \u001b[93m$$ |\u001b[92m$$\\    $$\\ \u001b[91m $$$$$$\\  \u001b[95m $$$$$$$\\ ')
+        console.info('  \u001b[96m  $$ | \u001b[93m$$  _____|\u001b[92m$$  __$$\\     \u001b[96m$$$$$\\    \u001b[93m$$ |\u001b[92m\\$$\\  $$  |\u001b[91m$$  __$$\\ \u001b[95m$$  _____|')
+        console.info('  \u001b[96m  $$ | \u001b[93m$$ /      \u001b[92m$$$$$$$$ |    \u001b[96m$$  __|   \u001b[93m$$ |\u001b[92m \\$$\\$$  / \u001b[91m$$$$$$$$ |\u001b[95m\\$$$$$$\\  ')
+        console.info('  \u001b[96m  $$ | \u001b[93m$$ |      \u001b[92m$$   ____|    \u001b[96m$$ |      \u001b[93m$$ |\u001b[92m  \\$$$  /  \u001b[91m$$   ____|\u001b[95m \\____$$\\ ')
+        console.info('  \u001b[96m$$$$$$ \u001b[93m\\$$$$$$$\\ \u001b[92m\\$$$$$$$\\     \u001b[96m$$$$$$$$\\ \u001b[93m$$ |\u001b[92m   \\$  /   \u001b[91m\\$$$$$$$\\ \u001b[95m$$$$$$$  |')
+        console.info('  \u001b[96m\\______|\u001b[93m\\_______|\u001b[92m \\_______|    \u001b[96m\\________|\u001b[93m\\__|\u001b[92m    \\_/    \u001b[91m \\_______|\u001b[95m\\_______/ ')
+        console.info('')
+    </script>
 </head>
 
 <body>
